@@ -44,19 +44,19 @@ sub new
 }
 
 dbus_method ("get", [],
-             [[ "array", [ "struct", "string", "string" ]],
+             [[ "array", "string" ],
               "string",
-              [ "array", [ "struct", "string", "string", [ "array", [ "struct", "string", "string", "int32" ]]]]]);
-dbus_method ("set", [[ "array", [ "struct", "string", "string" ]],
+              [ "array", [ "struct", "string", [ "array", [ "struct", "string", "string", "int32" ]]]]]);
+dbus_method ("set", [[ "array", "string" ],
                      "string",
-                     [ "array", [ "struct", "string", "string", [ "array", [ "struct", "string", "string", "int32" ]]]]], []);
+                     [ "array", [ "struct", "string", [ "array", [ "struct", "string", "string", "int32" ]]]]], []);
 dbus_signal ("changed", []);
 
 sub get
 {
   my ($self) = @_;
 
-  return (&Init::Services::get_runlevel_roles (),
+  return (&Init::Services::get_runlevels (),
           &Init::Services::get_default_runlevel (),
           &Init::Services::get ());
 }
