@@ -1,5 +1,12 @@
 2006-09-04  Carlos Garnacho  <carlosg@gnome.org>
 
+	* Init/Services.pm: do not provide services/runlevels roles. if 
+	the users of s-t-b want this will need to have their own heuristic.
+	* ServicesConfig.pm: do not export services/runlevels roles in the
+	DBus struct.
+
+2006-09-04  Carlos Garnacho  <carlosg@gnome.org>
+
 	* Services.pm (run_sysv_initd_script) (run_bsd_script)
 	(run_gentoo_script) (run_rcng_script) (run_script): Added back.
 
